crates/oxc_css_parser/tests/error/less/at-rule/import/malformed.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `(`, but found `<ident>`
  ┌─ malformed.less:1:9
  │
1 │ @import malformed "this-statement-is-invalid.less";
  │         ^^^^^^^^^


